# IntegraLive

./: .gitconfig  .gitignore  .gitmodules  BASEVERSION  FULLVERSION  README.md
GUI/: .actionScriptProperties  .flexProperties  .project
GUI-documentation/: Documentation of Integra Live GUI.html  index.html
IntegraLive/: .gitignore
ModuleCreator/: .actionScriptProperties  .project  (+1 more)
libIntegra/: .gitignore  AUTHORS  FAULTY .gitignore  HEADER  Makefile.am  README  README.luascripting  autogen.sh  configure.ac  libIntegra.pc.in
libIntegra/Integra/: Makefile.am  integra.h  integra_bridge.h
libIntegra/api/: MurmurHash2.h  command.h  command_api.h  command_result.h  command_source.h  common_typedefs.h  documentation_mainpage.h  error.h  guid_helper.h  integra_api.h  integra_session.h  interface_definition.h  module_manager.h  node.h  node_endpoint.h  notification_sink.h  path.h  polling_notification_sink.h  server.h  server_api.h  server_lock.h  server_startup_info.h  string_helper.h  trace.h  value.h
libIntegra/bridges/: Makefile.am
libIntegra/bridges/OSC/: Makefile.am  integra_osc_bridge.c  integra_osc_bridge.cpp
libIntegra/bridges/dummy/: Makefile.am  integra_dummy_bridge.cpp
libIntegra/doc/: Doxyfile  Makefile.am  documentation.doxygen.in
libIntegra/examples/: Makefile.am
libIntegra/examples/CLI/: Makefile.am  integra.c  test.lua
libIntegra/m4/: lua.m4  pd.m4
libIntegra/msvc/: copyDependenciesToDebug OLD.bat  copyDependenciesToRelease OLD.bat  copy_dependencies.bat  libIntegra.rc  libIntegra.vcxproj
libIntegra/msvc/documentation_deployment/: compileAllDocumentation.bat  compileMarkdown.bat
libIntegra/msvc/gui_autobuild/: buildgui.bat
libIntegra/msvc/libpd_autobuild/: build_libpd.bat  clean_libpd.bat
libIntegra/msvc/module_creator_autobuild/: buildmodulecreator.bat
libIntegra/msvc/versioning/: StampVer.bat
libIntegra/msvc/visual_studio_includes/: stdbool.h  windows_build_stuff.h
libIntegra/release/: RELEASE_INSTRUCTIONS  sftracker2txt.sh
libIntegra/schemas/: readme.txt
libIntegra/schemas/2014/: AudioThru.ixd  AudioThru.rixd  Sound Loop Vocoder.rixd  iid.xsd  module-collection.xml  module-collection.xsd  reify-iid.xsl  reify-ixd.xsl  reify-module-collection.xsl  riid.xsd  rixd.base.xsd  rixd.core.xsd  rixd.deprecated.xsd  rixd.native.xsd  rixd.user.xsd  rixd.xsd
libIntegra/schemas/v1.7/: gixd.xml  gixd.xsd  iid.xml  ixd.xsd
libIntegra/schemas/v2.0/: gixd.xml  gixd.xsd  iid-17-20.xsl  iid.xml  iid.xsd  ixd-17-20.xsl  ixd.xml  ixd.xsd
libIntegra/server/: Makefile.am  close_orphaned_processes.c  close_orphaned_processes.cpp  close_orphaned_processes.h  integra_server.c  integra_server.cpp  osc_client.cpp  osc_client.h  spawn.c  spawn_.h  xmlrpc_common.cpp  xmlrpc_common.h  xmlrpc_server.cpp  xmlrpc_server.h
libIntegra/src/: Makefile.am  MurmurHash2.cpp  MurmurHash2.h  atomic.cpp  atomic.h  attribute.c  attribute.cpp  attribute.h  audio_engine.cpp  audio_engine.h  audio_settings_logic.cpp  audio_settings_logic.h  bridge_host.c  bridge_host.cpp  bridge_host.h  command.c  command.cpp  command.h  command_source.cpp  command_source.h  common_typedefs.h  connection_logic.cpp  connection_logic.h  container_logic.cpp  container_logic.h  control_point_logic.cpp  control_point_logic.h  data_directory.c  data_directory.cpp  data_directory.h  delete_command.cpp  delete_command.h  dsp_engine.cpp  dsp_engine.h  envelope_logic.cpp  envelope_logic.h  error.c  error.cpp  error.h  file_helper.cpp  (+161 more)
libIntegra/testing/: Makefile.am
libIntegra/testing/C/: Makefile  test_link_no_run.c  test_run_server.c  test_run_server_indefinite.c  test_xmlrpc_runserver.c
libIntegra/testing/check/: Makefile.am  check_libIntegra.c  check_libIntegra.h  check_path.c  check_value.c
libIntegra/testing/lua/: Makefile  main.c
libIntegra/testing/xmlrpc/: README  cli.py  test.ixd  test.py
libIntegra/visualstudio/: .gitignore  DummyBridge.rc  DummyBridge.vcxproj  DummyBridge.vcxproj.filters  IntegraBackend.sln  IntegraServer.rc  IntegraServer.vcxproj  IntegraServer.vcxproj.filters  OscBridge.rc  OscBridge.vcxproj  OscBridge.vcxproj.filters  autogenerateLuaFiles.bat  copyDependenciesToDebug.bat  copyDependenciesToRelease.bat  libIntegra.vcxproj  libIntegra.vcxproj.filters
libIntegra/visualstudio/Setup/: .gitignore  Integra Live Setup.wixproj  MyInstallDirDlg.wxs  MyUI_InstallDir.wxs  Product.wxs  excludeMainExe.xsl  gpl-2.0.rtf
libIntegra/visualstudio/documentation_deployment/: compileAllDocumentation.bat  compileMarkdown.bat
libIntegra/visualstudio/gui_autobuild/: buildgui.bat
libIntegra/visualstudio/libpd_autobuild/: build_libpd.bat  clean_libpd.bat
libIntegra/visualstudio/module_creator_autobuild/: buildmodulecreator.bat
libIntegra/visualstudio/versioning/: StampVer.bat
libIntegra/visualstudio/visual_studio_includes/: stdbool.h  unistd.h  windows_build_stuff.h
libIntegra/xcode/Integra/Integra/: Integra-Info.plist
libIntegra/xcode/Integra/Integra.framework/: Integra
libIntegra/xcode/Integra/Integra.framework/Versions/A/Headers/: command_source.h  interface_definition.h  node.h  notification_sink.h  server.h  value.h
libIntegra/xcode/Integra/Integra.framework/Versions/A/Resources/: Info.plist  id2guid.csv
libIntegra/xcode/Integra/Integra.framework/Versions/A/Resources/modules/: AudioOut.module  BrightnessAnalyser.module  Connection.module  Distortion.module  GranularDelay.module  GraphicEQ-15band.module  MultiBandCompressor.module  Notch.module  PartialAnalyser.module  PercussiveOnsetDetector.module  QuadAudioOut.module  QuadPanner.module  ResonantBandPass.module  ResonantHarmonicFilter.module  RingModulator.module  StereoChorus.module  StereoReverb.module  StereoReverbTwo.module  StereoSoundfiler.module
libIntegra/xcode/Integra/Integra.xcodeproj/: project.pbxproj
libIntegra/xcode/Integra/Integra.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libIntegra/xcode/Integra/Integra.xcodeproj/project.xcworkspace/xcshareddata/: Integra.xccheckout
libIntegra/xcode/Integra/Integra.xcodeproj/xcshareddata/xcschemes/: Integra.framework.xcscheme
(+2115 files in other folders)
